opam-version: "2.0"
maintainer:   "Lortex"
homepage:     "https://github.com/TheLortex/networking-experiments"
authors: [ "Lortex"]
license: "ISC"
tags: ["org:mirage"]

build: [
]
depends: [
  "dune"
  "ocaml" {>= "4.08.0"}
  "uring"
  "tcpip"
  "eio"
  "eio_linux"
  "mirage-net-unix"
  "mirage-random-stdlib"
  "mirage-clock-unix"
]
pin-depends: [
  ["eio.dev" "git+https://github.com/ocaml-multicore/eio.git"]
  ["eio_linux.dev" "git+https://github.com/ocaml-multicore/eio.git"]
  ["uring.dev" "git+https://github.com/ocaml-multicore/ocaml-uring.git"]
]
synopsis: "Networking experiments"