opam-version: "2.0"
maintainer:   "Lortex"
homepage:     "https://github.com/TheLortex/networking-experiments"
authors: [ "Lortex"]
license: "ISC"
tags: ["org:mirage"]

build: [
]
depends: [
  "dune"
  "ocaml" {>= "4.08.0"}
  "uring"
  "tcpip"
  "mirage-net-unix"
  "mirage-random-stdlib"
  "mirage-clock-unix"
  "mirage-time-unix"
  "alcotest"
  "ipaddr-cstruct"
  "mirage-random-test"
  "mtime"
]
synopsis: "Networking experiments"