(executables
 (names iperf iperf_server http_utcp http_tcpip)
 (libraries
  eio_luv
  logs.fmt
  mirage-net-unix
  ethernet
  arp.mirage
  tcpip.ipv4
  tcpip.icmpv4
  mirage-random-stdlib
  mirage-clock-unix
  mirage-time-unix
  utcp.eio
  tcpip.tcp
  httpaf-eio)
 (instrumentation
  (backend landmarks --auto )))
